title position absolute to prevent shifting when streak is in double or triple digits

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -19,6 +19,7 @@
     margin: 0;
     left: 50%;
     transform: translateX(-50%);
+    transition: all none;
     font-size: 140%;
   }
 
